--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'Edit patient') %>
 
-<h2>Edit Patient Record</h2>
-	<%= render 'form' %>
+<h3 class='display-1'>Edit Patient Record</h3>
 
+<div class="well">
+	<%= render 'form' %>
+</div>
 
