--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,11 @@
 <% provide(:title, 'Add new user') %>
 <% provide(:button_text, 'Create account') %>
 
-<h1>Add new user</h1>
-
-
-  <div class="col-sm-4 col-sm-offset-4">
+<div class="col-sm-4 col-sm-offset-4">
+<h3 class='display-1'>New User Sign Up</h3>
+ <div class="well">
+  <div class="authform">
     <%= render 'form' %>
   </div>
+ </div>
+</div>
