--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,11 @@
 
   <body>
     <div id="header"> 
-    <%= render 'layouts/header' %>
+    <%= render 'layouts/navigation' %>
     </div>
 
    <div  class="container">
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
+      <%= render 'layouts/messages' %>
       <%= yield %>
    </div>
 
