--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,4 +1,8 @@
 <% provide(:title, 'New Patient') %>
-<h2>New Patient Sign up</h2>
 
-    	<%= render 'form' %>
+<div class="col-sm-10 col-sm-offset-1">
+<h3 class='display-1'> New Patient's Record </h3>
+ <div class="well">
+<%= render 'form' %>
+</div>
+</div>
