--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,50 +1,32 @@
-<%= form_for (@user)  do |f| %>
+<%= simple_form_for @user,  :html => { :role => 'form'}  do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-<div class="row">
-  <%= f.label :Username, class: "col-sm-6 control-label"%>
-  <div class="col-sm-6">
-  <%= f.text_field :name, class: "form-control" %>
-  </div>
+<div class="form-group">
+  <%= f.input :name %>
 </div>
 
-<div class="row">
-  <%= f.label :Email, class: "col-sm-6 control-label" %>
-  <div class="col-sm-6">
-  <%= f.email_field :email, class: "form-control" %>
-  </div>
+<div class="form-group">
+  <%= f.input :email, :autofocus => true %>
 </div>
 
-<div class="row">
-  <%= f.label :Password, class: "col-sm-6 control-label" %>
-  <div class="col-sm-6">
-  <%= f.password_field :password, class: 'form-control' %>
-  </div>
+<div class="form-group">
+  <%= f.input :password %>
 </div>
 
-<div class="row">
-  <%= f.label :Password_confirmation, class: "col-sm-6 control-label" %>
-  <div class="col-sm-6">
-  <%= f.password_field :password_confirmation, class: "form-control" %>
-  </div>
+<div class="form-group">
+  <%= f.input :password_confirmation  %>
 </div>
 
 <% if current_user.admin?  %>
-<div class="row">
-  <div class="col-sm-6">
-  <%= f.label :Administrator, class: "control-label" %> 
-  </div>
-  <div class="col-sm-6">
-  <%= f.check_box :admin  %>
-  </div>
+<div class="form-group">
+  <%= f.input :role, collection: USER_ROLES  %>
 </div>
 <% end %>
 
-<div class="spacer-20"></div>
 <div class="row">
-  <div class="col-sm-6 col-sm-offset-6">
-  <%= f.submit yield(:button_text), class: "btn btn-primary" %>
-  </div>
+<div class="col-md-6 col-md-offset-6">
+<%= f.button :submit, yield(:button_text), class: "btn btn-primary" %>
+</div>
 </div>
 
 <% end %>
