--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
           <th>Username</th>
           <th>Email</th>
 	  <th>Created</th>
-          <th>Admin</th>
+          <th>Role</th>
 <% if current_user.admin? %>
 	  <th>&nbsp;</th>
 	  <th>&nbsp;</th>
