Persistent sessions for users are put in place

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -250,6 +250,11 @@ aside {
 
 /* forms */
 
+#session_remember_me {
+  width: 20px;
+  margin-left: 0;
+}
+
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
