Bug in simple form (value_method)

--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -19,7 +19,7 @@
   </div>
   
   <div class="col-sm-2">
-  <%= f.input :pat_type, collection: PATIENT_TYPES, selected: 'HCP', hint: 'Required', label: 'Type' %>
+  <%= f.input :pat_type, collection: PATIENT_TYPES, selected: 'HCP', hint: 'Required', label: 'Payment Type' %>
   </div>
 </div>
 
