--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -129,7 +129,7 @@
 
 <div class="row">
   <div class="col-sm-4" id="visit_statuses">
-  <%= f.input :status, collection: VISIT_STATUSES, placeholder: 'Status', disabled: disabled %>
+  <%= f.input :status, collection: VISIT_STATUSES, include_blank: false,  placeholder: 'Status', disabled: disabled %>
   </div>
 
   <div class="col-sm-2">
