--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -36,7 +36,7 @@
 
 <div class="row">
   <div class="col-sm-3">
-  <%= f.input :ohip_num, label: 'OHIP Number', hint: 'Required *' %>
+  <%= f.input :ohip_num, label: 'Health Card Number', hint: 'Required *' %>
   </div>
 
   <div class="col-sm-1 padding-0">
