password reset; navigation tune-up;

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -250,8 +250,8 @@ aside {
 
 /* forms */
 
-#session_remember_me {
-  width: 20px;
+#session_remember_me, #user_activated {
+  width: 25px;
   margin-left: 0;
 }
 
