--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,9 @@
  <tr>
   <td><%= link_to user.name, user %></td>
-  <td><%= link_to user.email, user %></td>
-  <td><%= user.created_at.to_s %></td>
+  <td><%= user.email %></td>
   <td><%= user.role %></td>
+  <td><%= user.activated? %></td>
+  <td><%= user.created_at.to_s %></td>
 
   <% if current_user.admin? %>
 	  <td> <%= link_to "Edit", edit_user_path(user)  %> </td>
