--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, 'Edit user') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Update user profile</h1>
-
   <div class="col-sm-4 col-sm-offset-4">
+    <h3 class='display-1'>Update User Profile</h3>
     <%= render 'form' %>
   </div>
