--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,14 +3,13 @@
 <table class="tbl table-hover">
    <thead>
       <tr>
-          <th>Username</th>
+          <th>Name</th>
           <th>Email</th>
-	  <th>Created</th>
           <th>Role</th>
-<% if current_user.admin? %>
+	  <th>Active?</th>
+	  <th>Created</th>
 	  <th>&nbsp;</th>
 	  <th>&nbsp;</th>
-<% end %>
       </tr>
   </thead>
   <tbody>
